syntax = "proto3";

package inventry;

option go_package = "./inventry";

message Status {
  string status = 1;
}

service inventry {
  rpc GetAvailableStocksByID(GetAvailableStocksByIDIn) returns (GetAvailableStocksByIDOut) {}
  rpc BuyStocksByID(BuyStocksByIDIn) returns (BuyStocksByIDOut) {}
  rpc HealthCheck(stream Status)returns (stream Status) {}
}

message GetAvailableStocksByIDIn {
    string id = 1;
}

message GetAvailableStocksByIDOut {
    Item item = 1;
}
message Item {
  string id= 1;
  string name=2;
  int64 count=3;
}

message BuyStocksByIDIn {
  string id = 1;
  int64 count=2;

}

message BuyStocksByIDOut {
  string status = 1;
}